# otus-cpp

./: README.md
01.hello_world/: CMakeLists.txt
02.hello_world/: CMakeLists.txt  move_me_out.cpp
03.guess_the_number/: CMakeLists.txt  README.md
03.guess_the_number/source/: CMakeLists.txt  README.md  gameloop.cpp  gameloop.h  main.cpp  scores.txt  utils.cpp  utils.h
04.calculator/: README.md
04.calculator/include/: astnode.hpp  brace.hpp  expr.hpp  lexer.hpp  number.hpp  parser.hpp  term.hpp
04.calculator/src/: astnode.cpp  main.cpp  parser.cpp
05.statistics/: README.md  chrono_example.cpp  test.cpp
05.statistics/homework_sources/: random_shuffle.cpp  test.cpp
05.statistics/source/: statistics.cpp
05.statistics/source/statistics/: meansigma.cpp  meansigma.h  minmax.h  percentile.cpp  percentile.h  statistics.h
05.statistics/statistics/: CMakeLists.txt  README.md
05.statistics/statistics/source/: CMakeLists.txt  statistics.cpp
05.statistics/statistics/source/statistics/: meansigma.cpp  meansigma.h  percentile.cpp  percentile.h  statistics.h
06.containers/: CMakeLists.txt  README.md
06.containers/source/: CMakeLists.txt  run_tests.cpp
06.containers/source/myarray/: myarray.h  myarray.ipp
06.containers/source/mycontainer/: mycontainer.h
06.containers/source/mylist/: mylist.h  mylist.ipp
06.containers/source/myvector/: myvector.h  myvector.ipp
06.containers/source/utils/: utils.h  utils.ipp
06.containers/tests/: CMakeLists.txt  array_tests.cpp  general_tests.cpp  list_tests.cpp  tests.cpp  vector_tests.cpp
08.threading/: README.md  test.txt
08.threading/version1/src/: topk_words.cpp
08.threading/version1_async/src/: topk_words.cpp
08.threading/version2/include/: get_params.h  text_processing.h
08.threading/version2/src/: topk_words.cpp
08.threading/version2_thread/: CMakeLists.txt
08.threading/version2_thread/src/: topk_words.cpp
08.threading/version3_async_whole_file/: CMakeLists.txt
08.threading/version3_async_whole_file/src/: topk_words.cpp
08.threading/version4_teachers/src/: topk_words.cpp
08.threading_async/: CMakeLists.txt  test2.txt
08.threading_async/include/: monitor.h  text_processing.h
08.threading_async/src/: topk_words.cpp
cmake-test/cmake-test1/: CMakeLists.txt
cmake-test/cmake-test1/source/: main.cpp  version.cpp  version.h
cmake-test/cmake-test2/: CMakeLists.txt
cmake-test/cmake-test2/lib/: CMakeLists.txt  lib.cpp  lib.h  test.cpp
cmake-test/cmake-test2/source/: CMakeLists.txt  main.cpp
exercises/: CMakeLists.txt  README.md  copy_and_swap.cpp  multiarg.cpp  smart_ptr.cpp
exercises/threads/: CMakeLists.txt  condition_variable.cpp  monitor.cpp  waiting_queue.cpp
libraries_reference/: README.md
libraries_reference/dynamic_library/: CMakeLists.txt
libraries_reference/dynamic_library/dynamic_lib/: CMakeLists.txt  dynamic_lib.cpp  dynamic_lib.h
libraries_reference/dynamic_library/source/: CMakeLists.txt  main.cpp
libraries_reference/dynamic_library_outer/: CMakeLists.txt
libraries_reference/dynamic_library_outer/source/: main.cpp
libraries_reference/python_lib/: CMakeLists.txt
libraries_reference/python_lib/cpp/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  fibonacci_tests.cpp  module.cpp
libraries_reference/python_lib/python/: fibonacci.py  main.py  pyfibonacci_test.py
libraries_reference/static_library/: CMakeLists.txt
libraries_reference/static_library/source/: CMakeLists.txt
libraries_reference/static_library/static_lib/: CMakeLists.txt  static_lib.cpp
libraries_reference/static_library_outer/: CMakeLists.txt
libraries_reference/static_library_outer/source/: main.cpp
libraries_reference/static_library_outer/static_lib/: static_lib.h
vcpkg_reference/: CMakeLists.txt
vcpkg_reference/source/: CMakeLists.txt  main.cpp
vcpkg_reference/tests/: CMakeLists.txt  tests.cpp
